Add page admin and lecturer get classes

--- a/src/pages/dashboard/Dashboard.module.scss
+++ b/src/pages/dashboard/Dashboard.module.scss
@@ -23,4 +23,15 @@
      border-bottom: 1px solid $gray-200;
    }
  }
- 
+ .mainTable {
+  td,
+  thead {
+    border-top: 1px solid $gray-200;
+    padding: 1.25rem 1rem;
+  }
+
+  thead th {
+    color: theme-color('light');
+    text-transform: uppercase;
+  }
+}
