--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -16,7 +16,7 @@
   align-items: center;
   height: $navbar-height;
   width: 100%;
-  background: $logo-gradient;
+  background: #ff7675;
 
   a img {
     width: $sidebar-width-open - 60px;
